--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
     "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "lucide-react": "^0.316.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.21.3",
