--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.21.3",
+    "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.4",
     "tailwind-merge": "^2.2.1",
@@ -38,6 +40,7 @@
     "@types/node": "^20.11.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-scroll": "^1.8.10",
     "@types/uniqid": "^5.3.4",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
